<package format="2">
  <name>pp_urdf_final</name>
  <version>0.4.4</version>
  <description>
    <p>Final URDF Description package for the Pink Panther robot</p>
    <p>This package contains configuration data, 3D models and launch files
for the Pink Panther robot</p>
  </description>
  <author>Pol Bernat i Belenguer</author>
  <maintainer email="p.bernat@columbia.edu" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>